# courses

./: .gitignore  README.md
assignment1/: softmax.ipynb
cs231/assignment1/: knn.ipynb  softmax.ipynb  svm.ipynb  two_layer_net.ipynb
cs231/assignment2/: BatchNormalization.ipynb  ConvolutionalNetworks.ipynb  Dropout.ipynb  FullyConnectedNets.ipynb  start.sh
cs231/assignment3/: ImageGeneration.ipynb  ImageGradients.ipynb  RNN_Captioning.ipynb  requirements.txt
gpucuda/p2/: .cproject
gpucuda/p2/src/: CMakeLists.txt  HW2  Makefile  main.cpp  student_func.cu
gpucuda/p2/src/cm/: CMakeCache.txt  Makefile  cmake_install.cmake
gpucuda/p3/: .cproject  HW3  Makefile  main.cpp  reference_calc.cpp  student_func.cu
gpucuda/p4/: .cproject  HW4  Makefile  student_func.cu
gpucuda/p5/: .cproject  .project  HW5  Makefile  main.cu  student.cu
gpucuda/p6/: .cproject  .project  HW6  Makefile
ipim/: README.md
jurlia/: Bandits.jl  ReinforcementLearning.jl  main.jl  rl.jl
mlclassng/logistic_regression/: linear_regression_classify.m  linear_regression_error.m  linear_regression_gradient_descent.m  linear_regression_test.m  linear_regression_test3.m  logistic_regression_classify.m  logistic_regression_error.m  logistic_regression_gradient_descent.m  logistic_regression_newton.m  logistic_regression_solution.m  logistic_regression_test.m
mlclassng/mlclass-ex1-005/: computeCost.m  computeCostMulti.m  ex1_multi.m  featureNormalize.m  gradientDescent.m  gradientDescentMulti.m  ml_login_data.mat  (+1 more)
ndata/: readme.txt
noc/: .project  build.sbt  index.html
pgm/: solutions.txt
(+269 files in other folders)
